[Feature] Add missing rooms
Pending: Expand photos

--- a/index.html
+++ b/index.html
@@ -392,6 +392,76 @@
                     }
                 ]
             },
+
+            "salon6": {
+                "type": "equirectangular",
+                "panorama": "/Edited/Salon6.jpg",
+                // "title": "Salón 6",
+                "hfov": 120,
+                "pitch": -10,
+                "yaw": 0,
+                "hotSpots": [
+                    {
+                        "pitch": -33,
+                        "yaw": 88,
+                        "type": "scene",
+                        "text": "Salón 5",
+                        "sceneId": "salon5",
+                        "cssClass": "custom-hotspot"
+                    },
+                    {
+                        "pitch": -33,
+                        "yaw": -80,
+                        "type": "scene",
+                        "text": "Salón 7",
+                        "sceneId": "salon7",
+                        "cssClass": "custom-hotspot"
+                    },
+                    {
+                        "pitch": -10,
+                        "yaw": -21,
+                        "type": "scene",
+                        "text": "Salón Central",
+                        "sceneId": "salonCentral",
+                        "cssClass": "custom-hotspot"
+                    }
+                ]
+            },
+
+            "salon7": {
+                "type": "equirectangular",
+                "panorama": "/Edited/Salon7.jpg",
+                // "title": "Salón 7",
+                "hfov": 120,
+                "pitch": -7,
+                "yaw": 36,
+                "hotSpots": [
+                    {
+                        "pitch": -54,
+                        "yaw": 63,
+                        "type": "scene",
+                        "text": "Salón 6",
+                        "sceneId": "salon6",
+                        "cssClass": "custom-hotspot"
+                    },
+                    {
+                        "pitch": -58,
+                        "yaw": -55,
+                        "type": "scene",
+                        "text": "Salón 4",
+                        "sceneId": "salon4",
+                        "cssClass": "custom-hotspot"
+                    },
+                    {
+                        "pitch": -23,
+                        "yaw": -77,
+                        "type": "scene",
+                        "text": "Salón Central",
+                        "sceneId": "salonCentral",
+                        "cssClass": "custom-hotspot"
+                    }
+                ]
+            }
         },
         "hotSpotDebug": false,
         "strings": {
