Default to exterior

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         autoRotateInactivityDelay: 5000,
         autoRotate: 3,
         default: {
-          firstScene: "roomCentral",
+          firstScene: "exterior",
           sceneFadeDuration: 1000,
           author:
             '\<small\> \<a\ href\="https:\/\/josedanield10.com">José Daniel Durán<\/a\> (\<a\ href\="https:\/\/vakano.studio">VaKaNo Studio\<\/a\>) \<\/small\>',
